# RuneSignal

./: .env.local.example  .mcp.json  ATP_Master_Build_Prompt_Opus46.docx  DEVIATIONS.md  ENV_INSTRUCTIONS.md  EXTERNAL_ACTIONS_GTM.md  NEXT_PHASES.md  PHASE1_PLAN.md  PRODUCTION_TASKS.md  README.md  RuneSignal_Master_Strategy.md  S8_MORALOS_BUILD_PROMPT.md  S8_MORALOS_BUILD_PROMPT_UI.md  STRIPE_SETUP.md  TESTING.md  TrustLayer_Fix_Instructions.docx  TrustLayer_Master_Expansion_v3.md  TrustLayer_integration_PromptGuard.md  audit-chain-verify.ts  extract.js  implementation_plan.md  implementation_planerrors.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  runesignal_master_prompt_ready.md  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  supabase_push_log.txt  supabase_push_log2.txt  supabase_push_log3.txt  supabase_push_log4.txt  supabase_push_log5.txt  supabase_push_log6.txt  task.md  test_output.txt  tsconfig.json  (+3 more)
.github/: zap-rules.tsv
docs/: TECH_DEBT.md
e2e/: api.spec.ts  auth.spec.ts  billing.spec.ts  dashboard.spec.ts
examples/: approval-gateway.ts
lib/: stripe.ts
products/cost-intelligence/sdk/python/: README.md  pyproject.toml
products/cost-intelligence/sdk/python/runesignal/: __init__.py  _cost_table.py  _transport.py
products/cost-intelligence/sdk/python/tests/: test_cost_table.py
public/: openapi.yaml
scripts/: demo-walkthrough.ts  rotate-keys.js
src/: instrumentation-client.ts
tests/: agent-classification.test.ts  agent-export.test.ts  audit-chain-verify.ts  s7-hitl-verify.ts  (+9 more)
(+558 files in other folders)
