[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "runesignal"
version = "0.1.0"
description = "AI Cost Intelligence SDK — track, attribute, and reduce AI inference costs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "RuneSignal", email = "sdk@runesignal.com" }]
keywords = ["openai", "anthropic", "llm", "cost", "observability", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "openai>=1.0.0"]

[project.urls]
Homepage = "https://runesignal.com"
Documentation = "https://docs.runesignal.com"
Repository = "https://github.com/runesignal/sdk-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["runesignal*"]
